[project]
name = "BL4NativeModsMenu"
version = "1.1.11"
authors = [{ name = "Mattmab" }]
description = "Native in-game UMG menu for managing PythonSDK mods in Borderlands 4."

[tool.sdkmod]
name = "Bonk Utilities"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
supported_games = ["BL4"]
download = "https://github.com/mattmab/BL4NativeModsMenu/raw/refs/heads/main/BL4NativeModsMenu.sdkmod"
version = "1.1.11"
