[project]
name = "MattsBL4ModsMenu"
version = "1.1.13"
authors = [{ name = "Mattmab" }]
description = "Unofficial community-made Borderlands 4 PythonSDK mod manager UI by Mattmab."

[tool.sdkmod]
name = "MattsBL4ModsMenu"
license = {name = "MIT", url = "https://choosealicense.com/licenses/mit/" }
supported_games = ["BL4"]
download = "https://github.com/mattmab/BL4NativeModsMenu/raw/refs/heads/main/MattsBL4ModsMenu.sdkmod"
version = "1.1.13"
